fix: minor rewording of articles section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               Zero-downtime region migration
           </a>
           </h3>
-          <div class="meta">How I moved servers from US to Sweden without downtime.</div>
+          <div class="meta">Moving production servers from the US to Sweden without downtime</div>
         </li>
         <li>
           <h3>
@@ -140,7 +140,7 @@
               Best-in-class backups in AWS
             </a>
           </h3>
-          <div class="meta">How to design snapshot + restore workflows that actually work in production.</div>
+          <div class="meta">Designing reliable snapshot-based backup strategies</div>
         </li>
         <li>
           <h3>
@@ -148,7 +148,7 @@
               How IP whitelisting mitigated a critical security issue
             </a>
           </h3>
-          <div class="meta">A small change that prevented automated abuse at scale.</div>
+          <div class="meta">A simple mitigation for an unexpected vulnerability</div>
         </li>
       </ul>
     </section>
