feat: add two more articles. adjust title

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Juha Wilppu | Senior Product Engineer (React, Node.js, AWS)</title>
+  <title>Juha Wilppu | Staff Product Engineer (React, Node.js, AWS)</title>
   <meta name="description" content="Juha Wilppu &ndash; Senior Product Engineer specializing in React, TypeScript, AWS, and cloud-native systems." />
   <meta property="og:title" content="Juha Wilppu" />
-  <meta property="og:description" content="Senior Product Engineer with 13+ years of experience." />
+  <meta property="og:description" content="Staff Product Engineer with 13+ years of experience." />
   <meta property="og:image" content="https://juhawilppu.com/juha_wilppu_cv.jpg" />
   <meta property="og:url" content="https://juhawilppu.com" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -71,7 +71,7 @@
     <section class="row">
       <div>
         <h1>Juha Wilppu</h1>
-        <div class="subtitle">Senior Product Engineer</div>
+        <div class="subtitle">Staff Product Engineer</div>
         <p>
           I build software with React, Node.js, PostgreSQL and AWS. I've spent 13 years shipping production systems in demanding domains like healthcare and finance.
         </p>
@@ -128,11 +128,27 @@
       <ul>
         <li>
           <h3>
+            <span class="circle"></span> <a href="https://blog.juhawilppu.com/my-side-project-8-years-in-production-13m-invoiced">
+              My side project: 8 years in production, €13M invoiced
+            </a>
+          </h3>
+          <div class="meta">Architected and operated a Finnish ERP solo since 2017, scaling it to handle over €13M in invoices.</div>
+        </li>
+        <li>
+          <h3>
             <span class="circle"></span> <a href="https://blog.juhawilppu.com/zero-downtime-region-migration">
               Zero-downtime region migration
           </a>
           </h3>
           <div class="meta">Moving production servers from the US to Sweden without downtime</div>
+        </li>
+        <li>
+          <h3>
+            <span class="circle"></span> <a href="https://blog.juhawilppu.com/multiplayer-math-game-i-built-in-2013">
+              Multiplayer math game I built in 2013
+            </a>
+          </h3>
+          <div class="meta">Developed a competitive learning platform and conducted live classroom testing with 20 students.</div>
         </li>
         <li>
           <h3>
